@@ -77,6 +77,7 @@ Eugen Zagorodniy <e.zagorodniy@gmail.com>
 	* Mutual Accessibility (Tarjan's Algorithm).
 
 Johannes Reinhardt <jreinhardt@ist-dein-freund.de>
+	* Maximum-flow algorithm;
 	* Refactoring.
 
 Nathan Davis <davisn90210@gmail.com>
@@ -101,6 +102,7 @@ Tomaz Kovacic <tomaz.kovacic@gmail.com>
 	* Project commiter;
 	* Transitive edge detection;
 	* Critical path algorithm;
+	* Bellman-Ford algorithm;
 	* Logo design.
 
 Zsolt Haraszti <zsolt@drawwell.net>
