@@ -10,7 +10,9 @@ Release 1.7.0	[??? ??, 2010]
 Enhancements:
 	Added equality test for graphs, digraphs and hypergraphs;
 	Added has_edge() and has_hyperedge() methods to hypergraph objects;
-	Accepting subtypes of graph, digraph and hypergraph in dot-language output (Issue 64).
+	Accepting subtypes of graph, digraph and hypergraph in dot-language output (Issue 64);
+	Added Bellman-Ford algorithm;
+	Added Edmonds-Karp Maximum-Flow algorithm. 
 
 Fixes:
 	Adding an edge with a label to a digraph now works again;
